<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/join_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/lato_light"
        android:text="@string/join"
        android:textColor="@color/dark_gray"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suffix_heading" />

    <TextView
        android:id="@+id/prefix_heading"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/header_prefix"
        android:textColor="@color/dark_blue"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suffix_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/header_suffix"
        android:textColor="@color/dark_blue"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefix_heading" />

    <ImageView
        android:id="@+id/top_title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/prefix_heading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/suffix_heading"
        app:layout_constraintTop_toTopOf="@+id/suffix_heading"
        app:srcCompat="@drawable/top_title_bar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/suffix_heading"
        app:layout_constraintTop_toBottomOf="@+id/suffix_heading"
        app:srcCompat="@drawable/bottom_title_bar" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/app_name"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/topic_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topic_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fontFamily="@font/lato_italic"
            android:gravity="center"
            android:text="@string/hint"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            android:textStyle="italic" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/join_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/join_button_background"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/join_btn_text"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>